--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2279,6 +2279,9 @@
     <ClCompile Include="UVa\400\496.cpp">
       <Filter>UVaOJ\400\490</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\400\494.cpp">
+      <Filter>UVaOJ\400\490</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
