--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2285,6 +2285,9 @@
     <ClCompile Include="UVa\400\492.cpp">
       <Filter>UVaOJ\400\490</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\140.cpp">
+      <Filter>UVaOJ\100\140</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
