--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2288,6 +2288,9 @@
     <ClCompile Include="UVa\100\140.cpp">
       <Filter>UVaOJ\100\140</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10193.cpp">
+      <Filter>UVaOJ\10100\10190</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
