--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2294,6 +2294,9 @@
     <ClCompile Include="UVa\10300\10361.cpp">
       <Filter>UVaOJ\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10500\10573.cpp">
+      <Filter>UVaOJ\10500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
