--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2297,6 +2297,9 @@
     <ClCompile Include="UVa\10500\10573.cpp">
       <Filter>UVaOJ\10500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10600\10664.cpp">
+      <Filter>UVaOJ\10600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
