--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2300,6 +2300,9 @@
     <ClCompile Include="UVa\10600\10664.cpp">
       <Filter>UVaOJ\10600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10800\10815.cpp">
+      <Filter>UVaOJ\10800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
