--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2303,6 +2303,9 @@
     <ClCompile Include="UVa\10800\10815.cpp">
       <Filter>UVaOJ\10800</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11000\11039.cpp">
+      <Filter>UVaOJ\11000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
