--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2312,6 +2312,9 @@
     <ClCompile Include="UVa\500\530.cpp">
       <Filter>UVaOJ\500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\800\825.cpp">
+      <Filter>UVaOJ\800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
