--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2315,6 +2315,9 @@
     <ClCompile Include="UVa\800\825.cpp">
       <Filter>UVaOJ\800</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\900\911.cpp">
+      <Filter>UVaOJ\900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
