--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2324,6 +2324,9 @@
     <ClCompile Include="UVa\900\991.cpp">
       <Filter>UVaOJ\900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10128.cpp">
+      <Filter>UVaOJ\10100\10120</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
