--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2330,6 +2330,12 @@
     <ClCompile Include="UVa\10200\10223.cpp">
       <Filter>UVaOJ\10200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10323.cpp">
+      <Filter>UVaOJ\10300</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\10300\10338.cpp">
+      <Filter>UVaOJ\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
