--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2336,6 +2336,9 @@
     <ClCompile Include="UVa\10300\10338.cpp">
       <Filter>UVaOJ\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10900\10910.cpp">
+      <Filter>UVaOJ\10900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
