--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2339,6 +2339,9 @@
     <ClCompile Include="UVa\10900\10910.cpp">
       <Filter>UVaOJ\10900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10900\10943.cpp">
+      <Filter>UVaOJ\10900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
