--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2342,6 +2342,9 @@
     <ClCompile Include="UVa\10900\10943.cpp">
       <Filter>UVaOJ\10900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11000\11076.cpp">
+      <Filter>UVaOJ\11000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
